# brrrData

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
data_processing/: modification.py
src/brrrData/: __main__.py
