[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brrrData"
version = "0.2.0" # Replace with your actual version number
description = "A tool for handling Excel files and data processing."
authors = [{ name = "felix arvidsson", email = "felix.arvidsson@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
  "blessed==1.20.0",
  "editor ==1.6.6",
  "et-xmlfile ==1.1.0",
  "inquirer ==3.4.0",
  "numpy ==2.1.1",
  "openpyxl ==3.1.5",
  "pandas ==2.2.2",
  "prompt_toolkit ==3.0.47",
  "python-dateutil ==2.9.0.post0",
  "pytz ==2024.1",
  "readchar ==4.2.0",
  "runs ==1.2.2",
  "six ==1.16.0",
  "tzdata ==2024.1",
  "wcwidth ==0.2.13",
  "xmod ==1.8.1",
]
